hphp/hack/test/typecheck/constraints/generic_self_type_access_failure.php.exp
File "generic_self_type_access_failure.php", line 18, characters 36-53:
Some type arguments violate their constraints (Typing[4323])
  File "generic_self_type_access_failure.php", line 11, characters 32-33:
  `TX` is a constrained type parameter
  File "generic_self_type_access_failure.php", line 11, characters 38-40:
  This type constraint is violated
  File "generic_self_type_access_failure.php", line 11, characters 38-40:
  Expected `Box`
  File "generic_self_type_access_failure.php", line 18, characters 52-52:
  But got `T = TX::T`
File "generic_self_type_access_failure.php", line 20, characters 11-11:
A `where` type constraint is violated here (Typing[4323])
  File "generic_self_type_access_failure.php", line 12, characters 28-28:
  This is the method with `where` type constraints
  File "generic_self_type_access_failure.php", line 13, characters 13-13:
  No type constant `T` in `Intf`
  File "generic_self_type_access_failure.php", line 5, characters 11-14:
  Declaration of `Intf` is here
